<resources>
    <string name="app_name">SITE</string>
    <string name="open_camera">Open Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_enough_permission">No enough permissions(CAMERA, RECORD_AUDIO, WRITE_EXTERNAL_STORAGE)</string>
    <string name="shot">Shot</string>
    <string name="cancel">Cancel</string>
    <string name="image_mode">Image Mode</string>
    <string name="finish">Finish</string>
    <string name="flip">Flip</string>
    <string name="done">Done</string>
    <string name="fill">Fill</string>
    <string name="zoom">Zoom</string>
    <string name="image_size">Image size</string>
    <string name="ratio">Ratio</string>
    <string name="flash_auto">Auto</string>
    <string name="flash_on">On</string>
    <string name="flash_off">Off</string>
    <string name="tourch">Tourch</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofences_added">Geofences Added</string>
    <string name="geofences_already_added">Geofences Already Added</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_proceed">Proceed</string>
    <string name="action_log_out">Log Out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="welcome_text">Welcome,</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="inbox_menu_1">Menu 1</string>
    <string name="inbox_menu_2">Menu 2</string>
    <string name="title_activity_inbox">Runs</string>
    <string name="title_activity_task_detail">Run</string>
    <string name="title_all">All</string>
    <string name="title_safety">Safety</string>
    <string name="title_rails">Rails</string>
    <string name="title_tiles">Tiles</string>
    <string name="title_spikes">Spikes</string>
    <string name="title_jointBar">Joint Bar</string>
    <string name="title_switch">Switch</string>
    <string name="title_activity_report_add">Report</string>
    <string name="title_activity_report_inbox">Reports</string>
    <string name="title_activity_report_detail">Reports</string>
    <string name="title_activity_defect_code">Defect Code(s)</string>
    <string name="title_activity_popup">Popup</string>
    <string name="title_new_report_btn_edit">Update</string>
    <string name="title_new_report_btn_save">Save</string>
    <string name="title_activity_report_view">View Only</string>
    <string name="empty_location_value">0.0</string>
    <string name="welcome_txt">Welcome Back</string>
    <string name="err_internet_not_available">Server unreachable, check internet connection!</string>
    <string name="title_activity_issues">Issues Activity</string>
    <string name="tab_text_1">Inspect</string>
    <string name="tab_text_2">Report</string>
    <string name="tab_text_3">Info</string>
    <string name="tab_text_4">Maintain</string>
    <string name="tab_text_4_scim">Forms</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login_version_title">Version:</string>
    <string name="hello_blank_fragment">Form</string>
    <string name="title_activity_rpt_time_and_gps">Time And Gps Report</string>
    <string name="description_placeholder">Please add description...</string>
    <string name="description_title">Description:</string>
    <string name="pictures_after_fix_title">Photos After Fix</string>
    <string name="pictures_title">Photos</string>
    <string name="voice_notes_title">Internal notes only</string>
    <string name="title_activity_asset_maps">Asset Map</string>
    <string name="work_plan">inspection</string>
    <string name="task_status">Run Status</string>
    <string name="reported">Reported</string>
    <string name="time_elapsed">Time Elapsed</string>
    <string name="stop">STOP</string>
    <string name="stop_new_theme">Stop</string>
    <string name="select_work_plan">SELECT INSPECTION RUN</string>
    <string name="inspections">Inspection</string>
    <string name="sync">JOB SAFETY BRIEFING</string>
    <string name="reports">REPORTS</string>
    <string name="inspection">Inspection:</string>
    <string name="task_dashboard">TASK Dashboard</string>
    <string name="task_started">Started At</string>
    <string name="issues">Issues</string>
    <string name="images">Images</string>
    <string name="start">START</string>
    <string name="start_new_theme">Start</string>
    <string name="long_press_to_activate">Please long press to activate</string>
    <string name="enable_location">Please enable location to continue</string>
    <string name="task_closed">Run Closed!</string>
    <string name="view_running_task">View Active Run</string>
    <string name="view">View</string>
    <string name="time_total">Time Total</string>
    <string name="sync_service_running">Sync Service Already Running ...</string>
    <string name="network_unavailable">Network unavailable!</string>
    <string name="long_press_to_continue">Please long press option to continue</string>
    <string name="confirmation">Confirmation!</string>
    <string name="want_to_stop_inspection">Do you really want to stop Inspection?</string>
    <string name="status">Status</string>
    <string name="please_wait">Please Wait!</string>
    <string name="waiting_for_sync_service">Waiting for sync service</string>
    <string name="no_last_inspection">No active inspection!</string>
    <string name="work_plan_starting">Inspection Starting</string>
    <string name="inspection_started">Inspection Started</string>
    <string name="unable_to_start_inspection">Unable to Start Inspection</string>
    <string name="complete_all_tasks">Please complete all runs to close session</string>
    <string name="unable_to_find_work_plan">Unable to find Inspection</string>
    <string name="finishing_inspection">Please wait! Finishing Inspection</string>
    <string name="inspection_closed">Inspection Closed successfully</string>
    <string name="enable_gps">Please enable GPS, Try again</string>
    <string name="want_to_log_out">Do you really want to Log Out?</string>
    <string name="log_out_first_server_info">Please logout first, to access settings !</string>
    <string name="language_setting">Language</string>
    <string name="lang_dialog_title">Language</string>
    <string name="lang_dialog_message">Please select language</string>
    <string name="want_to_select_asset">Do you really want to select ?</string>
    <string name="want_to_start_task">Do you really want to Start Run?</string>
    <string name="want_to_start_task_title">Start Run?</string>
    <string name="want_to_end_task_title">End Run?</string>
    <string name="want_to_end_task">Do you really want to end run?</string>
    <string name="press_add_button">* Please press (+) button to add</string>
    <string name="assets">ASSETS:</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="task">Run</string>
    <string name="asset_type">Asset type</string>
    <string name="track_segment">Asset</string>
    <string name="no_def_code">No defect code available !</string>
    <string name="title_activity_select_asset">Select Asset</string>
    <string name="title_activity_server_info">Settings</string>
    <string name="title_activity_monitoring">Monitoring</string>
    <string name="title_activity_task_dashboard">Task Dashboard</string>
    <string name="your_location">Your Location</string>
    <string name="select_asset">Select Asset</string>
    <string name="marked_on_site">Fixed on site?</string>
    <string name="priority">Priority</string>
    <string name="check_list">Check List</string>
    <string name="def_codes">Defects / Deficiencies</string>
    <string name="def_codes_1">Defect / Deficiency</string>
    <string name="track_defects">Track Defects!</string>
    <string name="select_priority">Please select priority</string>
    <string name="select_description">Please enter description</string>
    <string name="hold_to_record">Hold to record!</string>
    <string name="report_time_and_gps">Time and GPS Report</string>
    <string name="report_time_and_gps_map">Time and GPS Map Report</string>
    <string name="report_loading">Loading Report</string>
    <string name="report_time_and_gps_detail">Report will show your all day time sheet along with GPS coordinates</string>
    <string name="report_time_and_gps_map_detail">Report will show your all day time sheet on map</string>
    <string name="started">Started</string>
    <string name="issue">Issue</string>
    <string name="completed">Completed</string>
    <string name="day_closed">Day Closed</string>
    <string name="closed">Closed</string>
    <string name="date">Date</string>
    <string name="want_to_start_work_plan">Do you really want to start </string>
    <string name="last_execution">Last Execution</string>
    <string name="days_ago">day(s) ago</string>
    <string name="next_inspection">Next Inspection</string>
    <string name="server">Server:</string>
    <string name="port">Port</string>
    <string name="add">ADD</string>
    <string name="global_settins">Global settings</string>
    <string name="briefing_yes">Yes</string>
    <string name="briefing_no">No</string>
    <string name="briefing_whistle_test">Remember, a whistle test MUST be done after the watchmen are in place!</string>
    <string name="btn_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="require_mp_title">Please enter your Start Milepost before starting inspection.</string>
    <string name="start_mp_title">Start MP:</string>
    <string name="traverse_track_selection_title">Please select the Traverse track</string>
    <string name="traversed_by_title">Traversed by:</string>
    <string name="traverse_by_walking">Walking</string>
    <string name="traverse_by_driving">Hi-Rail</string>
    <string name="forms">Forms</string>
    <string name="weather_condition_title">Weather conditions:</string>
    <string name="inspection_type_title">Inspection type</string>
    <string name="normally_schedule_entry">Normally Schedule</string>
    <string name="weather_related_entry">Weather Related</string>
    <string name="special_inspection_entry">Special Inspection</string>
    <string name="end_mp_dialog_title">End MP: </string>
    <string name="exp_end_dialog_title">Exp. End: </string>
    <string name="start_at_dialog_title">Started At: \u0020</string>
    <string name="session_complete_title">Session ending</string>
</resources>