<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item
        android:id="@+id/navigation_safety"
        android:icon="@drawable/ic_clear_all_black_24dp"
        android:title="@string/title_safety" />-->
    <item
        android:id="@+id/navigation_safety"
        android:icon="@drawable/ic_safety_hazard"
        android:title="@string/title_safety" />

    <item
        android:id="@+id/navigation_rails"
        android:icon="@drawable/ic_rail_track"
        android:title="@string/title_rails" />

    <!-- <item
         android:id="@+id/navigation_tiles"
         android:icon="@drawable/tiles"
         android:title="@string/title_tiles" />-->

    <item
        android:id="@+id/navigation_spikes"
        android:icon="@drawable/spikes"
        android:title="@string/title_spikes" />
    <item
        android:id="@+id/navigation_jointBar"
        android:icon="@drawable/ic_joint_bars"
        android:title="@string/title_jointBar" />
    <item
        android:id="@+id/navigation_switch"
        android:icon="@drawable/ic_switch"
        android:title="@string/title_switch" />

</menu>
