<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">


<RadioGroup
	android:id="@+id/rg_row_20"
	style="@style/RadioGroupStyle">
	
	<RadioButton
    android:id="@+id/radioButton_yes_20"
		style="@style/RadioButtonStyle"
		android:fontFamily="@font/cabin"
    android:text="@string/briefing_yes" />
	
	<RadioButton
    android:id="@+id/radioButton_no_20"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
		android:fontFamily="@font/cabin"
    android:text="@string/briefing_no" />
	
	</RadioGroup>
	
	<TextView
    android:id="@+id/textView_row_20"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
		style="@style/TextviewStyle"
		android:padding="10dp"
		android:gravity="center"
		android:fontFamily="@font/cabin"
    android:text="@string/briefing_whistle_test" />
 
</LinearLayout>