<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="40dp">
    <LinearLayout
        android:id="@+id/ll_start_mp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_title_msg_wp_start_mp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/require_mp_title"/>
        <TextView
            android:id="@+id/tv_title_mp_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:textSize="@dimen/btn_font_size"
            android:text="MP"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:fontFamily="@font/cabin"
                android:textSize="@dimen/btn_font_size"
                android:text="@string/start_mp_title"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_start_mp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_workplan_start_mp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="1"
                    android:inputType="numberDecimal"
                    android:fontFamily="@font/cabin"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_traverse_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_traverse_track_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/traverse_track_selection_title"/>
        <Spinner
            android:id="@+id/sp_traverse_track"
            android:fontFamily="@font/cabin"
            android:textSize="@dimen/btn_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/traversed_by_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <RadioGroup
                android:id="@+id/rg_traverse_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/rb_action_class2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin"
                    android:textSize="12sp"
                    android:text="@string/traverse_by_driving" />
                <RadioButton
                    android:id="@+id/rb_action_class1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:fontFamily="@font/cabin"
                    android:text="@string/traverse_by_walking" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_weather_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/weather_condition_title"/>
        <EditText
            android:id="@+id/et_weather_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_inspection_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/inspection_type_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <RadioGroup
                android:id="@+id/rg_inspection_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/rb_inspection_type_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin"
                    android:textSize="12sp"
                    android:text="@string/normally_schedule_entry" />
                <RadioButton
                    android:id="@+id/rb_inspection_type_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:fontFamily="@font/cabin"
                    android:text="@string/weather_related_entry" />
                <RadioButton
                    android:id="@+id/rb_inspection_type_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:fontFamily="@font/cabin"
                    android:text="@string/special_inspection_entry" />
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/description_title"/>
        <EditText
            android:id="@+id/et_inspection_type_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="1"/>
    </LinearLayout>
    <!--<LinearLayout
        android:id="@+id/ll_visual_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_visual_track_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please select the Traverse track"/>
        <Spinner
            android:id="@+id/sp_visual_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>-->

</LinearLayout>

</ScrollView>