<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rl_sessions_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:visibility="visible"
        android:background="@color/title_background">

        <ImageView
            android:id="@+id/iv_sessions_dialog_title"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:drawableTint="@android:color/black"
            android:src="@drawable/ic_web_asset_gray_24dp"
            android:layout_marginStart="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/session_complete_title"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_sessions_dialog_title"
            android:fontFamily="@font/cabin"
            android:textColor="@color/title_text" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/rl_sessions_dialog_title"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">
            <TextView
                android:id="@+id/tv_session_end_dialog_range_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Limit of mps"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/start_at_dialog_title"/>
            <TextView
                android:id="@+id/tv_session_dialog_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">
            <TextView
                android:id="@+id/tv_exp_end_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp_end_dialog_title"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_session_exp_end_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3.35"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/end_mp_dialog_title"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_end_mp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_session_end_mp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="1"
                    android:inputType="numberDecimal"
                    android:fontFamily="@font/cabin"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>